# tollbooth

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: release.yml
demo/: demo.tape  tollbooth.yaml
demo/events/: 01-bash-curl-pipe-sh.json  02-mcp-egress-secret.json  03-post-result-secret.json  04-bash-ok.json
docs/: security-design.md
docs/design/: gateway-design.md
examples/: hooks-demo.yaml  tollbooth.yaml
examples/plugins/: prompt_injection.py
tests/: conftest.py  echo_server.py  fake_oauth_server.py  http_echo_server.py  plugin_samples.py  test_audit.py  test_cli.py  test_config.py  test_dlp.py  test_hook.py  test_integration.py  test_oauth.py  test_oauth_integration.py  test_pipeline.py  test_placeholder.py  test_plugins.py  test_policy.py  test_proxy.py  test_upstream.py
tollbooth/: __init__.py  audit.py  config.py  dlp.py  hook.py  main.py  oauth.py  pipeline.py  plugins.py  policy.py  proxy.py  upstream.py
