[project]
name = "tollbooth"
version = "0.1.0"
description = "A security gateway for AI agents: a transparent MCP proxy that enforces policy, DLP, and audit on every tool call and result."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
tollbooth = "tollbooth.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "regression: tests for previously caught bugs",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Uncomment if package directory name differs from project name
# [tool.hatch.build.targets.wheel]
# packages = ["tollbooth"]
